--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ ignore = ["E501", "B008"]
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
+
+[tool.poetry.group.dev.dependencies]
+httpx = "^0.24"
