--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r fastapi_app/requirements.txt
+          pip install -r requirements-dev.txt
           pip install ruff pytest pytest-asyncio
 
       - name: Ruff (lint)
